# SOL-TICKET-EVENT-PLTFROM

./: .env.example  README.md  latest-agave.json  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx  providers.tsx  wallet-context.tsx
app/about/: page.tsx
app/api/actions/: _utils.ts
app/api/actions/events/[eventId]/: route.ts
app/api/actions/events/create/: route.ts
app/api/events/: route.ts
app/api/events/scrape/: route.ts
app/api/events/stream/: route.ts
app/api/events/withdraw/: route.ts
app/api/health/db/: route.ts
app/api/prices/: route.ts
app/api/stats/: route.ts
app/api/tickets/: route.ts
app/api/transactions/: route.ts
app/api/wallet/: route.ts
app/connect-wallet/: page.tsx
app/dashboard/: page.tsx
app/events/: page.tsx
app/events/[id]/: page.tsx
app/whitepaper/: page.tsx
components/: footer.tsx  header-wrapper.tsx  header.tsx
docs/: API.md  ARCHITECTURE.md  README.md  SMART-CONTRACT.md
lib/: db.ts  realtime.ts
programs/blink_ticket/: Cargo.toml
programs/blink_ticket/src/: lib.rs
programs/blink_ticket/src/instructions/: claim_revenue.rs  create_event.rs  initialize_program.rs  mint_cnft_ticket.rs  mod.rs  purchase_ticket.rs  transfer_ticket.rs  update_event.rs  verify_ticket.rs
programs/blink_ticket/src/state/: event.rs  mod.rs  program_state.rs  ticket.rs
scripts/: e2e-buy-ticket.mjs  e2e-create-and-buy.mjs  e2e-onchain-post-test.mjs  e2e-scrape-auto-create.mjs  setup-db.sql
